--- a/finance.qmd
+++ b/finance.qmd
@@ -29,3 +29,8 @@ disp <- vroom(here("data", "disp.csv"))
 da <- inner_join(accounts, disp)
 ```
 
+```{r}
+cda <- inner_join(clients, da, by = join_by(client_id))
+```
+
+
